k8s/app-deployment.yaml
# ----------------------------
# Deployment Spring Boot
# ----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-app
          image: springboot-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
# ----------------------------
# Service Spring Boot
# ----------------------------
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot-app
  ports:
    - port: 8081        # port interne cluster
      targetPort: 8081  # port du container
      #nodePort: 30091   # port externe minikube
