k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voiture-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-svc
                port:
                  number: 80
